--- a/Homepage.html
+++ b/Homepage.html
@@ -30,7 +30,7 @@
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
 				<a href="Essential Elements.html">Essential Elements</a>
-				<a href="Water and Water Cycle.html">Water and Water cycle</a>
+				<a href="Water and Water cycle.html">Water and Water cycle</a>
 				<a href="Reference.html">Reference</a>
 			</nav>
 		</header>
