--- a/Essential Elements.html
+++ b/Essential Elements.html
@@ -25,7 +25,7 @@
 	<!--top-->
 	<!--This body is full of content-->
 	<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
-		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
+		<div style="position: relative;"> <img src="Group5Logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
 	<h1 align="center">GROUP 5 - ESSENTIAL ELEMENTS</h1>
 	<header>
 			<nav>
