--- a/Homepage.html
+++ b/Homepage.html
@@ -51,7 +51,7 @@
 				<img src=Sky.jpg Sky height="150" width="150">
 				<img src=Water-cycle.jpg Cycle height="150" width="150">
 				<img src=Cup-of-water.jpg water height="150" width="150">
-				<img src=isle.jpg isle water height="150" width="150">
+				<img src=Isle.jpg isle water height="150" width="150">
 				<img src=Soap.jpg Soap height="150" width="150">
 				<img src=Sink.jpg Sink height="150" width="150">
 				<img src=angeles.jpg angeles height="150" width="150">
