--- a/Homepage.html
+++ b/Homepage.html
@@ -60,5 +60,12 @@
 				<img src=rain.jpg rain height="150" width="150">
 			</marquee>
 		</div>
+	</center>
+	<h1 align="center">TRY TAKING OUR QUIZ!</h1>
+		<div id="test 1">
+		<div style="width:100%;display:flex;flex-direction:column;gap:8px;min-height:635px;"><iframe src="https://quizizz.com/embed/quiz/66cdcd98d0dda8f676b7f93a" title="Group-5 Quiz - Quizizz" style="flex:1;" 
+		frameBorder="0" allowfullscreen></iframe><a href="https://quizizz.com/admin?source=embedFrame" 
+		target="_blank">Explore more at Quizizz.</a></div>
+		</div>
 	</body>
 </html>
