--- a/Essential Elements.html
+++ b/Essential Elements.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Group 5 - Grade 8 Ecclesiastes - Essential Elements</title>
+		<link rel="icon" type="image/x-icon" href="5logo.ico" />
 	</head>
 	<style>
 	body{
