--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Group 5 - Grade 8 Ecclesiastes - HomePage</title>
-		<link rel="icon" type="image/png" href="group5logo.png" />
+		<link rel="icon" type="image/png" href="Group5logo.png" />
 	</head>
 	<style>
 	body{
