--- a/Essential Elements.html
+++ b/Essential Elements.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Group 5 - Grade 8 Ecclesiastes - Essential Elements</title>
-		<link rel="icon" type="image/png" href="Group5logo.png" />
+		<link rel="icon" type="image/png" href="Group5Logo.png" />
 	</head>
 	<style>
 	body{
