--- a/Homepage.html
+++ b/Homepage.html
@@ -40,8 +40,9 @@
 		<hr/>
 	<!--This is full of pictures and videos about water-->
 	<h1 align="left"><u>INTRODUCTION</u></h1>
-	<h2 style="margin-left: 100px; margin-right: 100px">In this website, we are here to share information about Essential Elements, Water, and Water cycle. 
-	It is here where you can learn or test yourself about these topics. We are here to assist people in learning or understanding on the topics of water or the elements.
+	<h2 style="margin-left: 100px; margin-right: 100px">Our group offers a comprehensive website dedicated to essential elements, water, and the Water Cycle, 
+	providing valuable information for a deep understanding of these fascinating topics. Explore our website to understand interconnected elements and 
+	processes essential for Earth's life, finding educational and inspiring resources to embark on your learning journey.
 	</h2>
 	<center><img src=GROUP_5_MEMBERS.png MEMBERS height="500" width="350"></center>
 	<h2 align="center">PICTURES TAKEN BY OUR GROUP</h2>
