--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Group 5 - Grade 8 Ecclesiastes - HomePage</title>
-		<link rel="icon" type="image/png" href="Group5Logo.png" />
+		<link rel="icon" type="image/png" href="group5logo.png" />
 	</head>
 	<style>
 	body{
@@ -15,26 +15,78 @@
 	<style>
 	#test1 {
 		background-color:#373737;
-		width: 1800px;
+		width: 170px;
+		height: 1150px;
+		overflow: hidden;
 		border: 10px solid black;
-		padding: 10px;
+		padding: 0px;
 		margin: auto;
+		float:right;
 	}
+	
+	 marquee {
+        height: 100%; 
+    }
+		}
+    .quiz-section a:hover {
+        text-decoration: underline;
+    }
+	#test2 {
+		background-color:#fbfff1;
+		width: 500px;
+		border: 10px solid black;
+		padding: 20px;
+		margin: 15px;
+	}
+        .right {
+            float: right;
+            margin: 10px; 
+        }
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #00ff62;
+			border: none;
+			border-radius: 10px;
+			 cursor: pointer;
+        }
+        .back-to-top:hover {
+            background-color: #0056b3;
+		}
+		 nav a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #000;
+        }
+		.container {
+            position: relative;
+            width: 100%;
+            height: 100px;
+            border: 1px;
+        }
+		.positioned-image {
+            position: absolute;
+            top: 100px;
+            right: 100px;
+            width: 200px;
+            height: auto;
+        }
 	</style>
 	
 	<body>
 	<!--This body is full of content-->
 		<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
-		<div style="position: relative;"> <img src="Group5Logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
+		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
 	<h1 align="center">GROUP 5</h1>
-			<header>
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
 				<a href="Essential Elements.html">Essential Elements</a>
-				<a href="Water and Water cycle.html">Water and Water cycle</a>
+				<a href="Water and Water Cycle.html">Water and Water cycle</a>
 				<a href="Reference.html">Reference</a>
 			</nav>
-		</header>
+
 	<hr />
 	<h2 style="color:white"><marquee>THIS IS GROUP 5 AND WELCOME TO OUR WEBSITE --- WELCOME TO THE HOMEPAGE</h2></marquee>
 		<hr/>
@@ -44,16 +96,14 @@
 	providing valuable information for a deep understanding of these fascinating topics. Explore our website to understand interconnected elements and 
 	processes essential for Earth's life, finding educational and inspiring resources to embark on your learning journey.
 	</h2>
-	<center><img src=GROUP_5_MEMBERS.png MEMBERS height="500" width="350"></center>
-	<h2 align="center">PICTURES TAKEN BY OUR GROUP</h2>
-	<center>
+	<a id="Quiz" href="#quiz-section"><h2>Try Taking Our Quiz</h2></a>
 		<div id="test1">
-			<marquee behavior="scroll" direction="left">
+			<marquee behavior="scroll" direction="down">
 				<img src=River.jpg River height="150" width="150">
 				<img src=Sky.jpg Sky height="150" width="150">
 				<img src=Water-cycle.jpg Cycle height="150" width="150">
 				<img src=Cup-of-water.jpg water height="150" width="150">
-				<img src=Isle.jpg isle water height="150" width="150">
+				<img src=isle.jpg isle water height="150" width="150">
 				<img src=Soap.jpg Soap height="150" width="150">
 				<img src=Sink.jpg Sink height="150" width="150">
 				<img src=angeles.jpg angeles height="150" width="150">
@@ -62,12 +112,30 @@
 				<img src=rain.jpg rain height="150" width="150">
 			</marquee>
 		</div>
-	</center>
-	<h1 align="center">TRY TAKING OUR QUIZ!</h1>
-		<div id="test 1">
-		<div style="width:100%;display:flex;flex-direction:column;gap:8px;min-height:635px;"><iframe src="https://quizizz.com/embed/quiz/66cdcd98d0dda8f676b7f93a" title="Group-5 Quiz - Quizizz" style="flex:1;" 
+	<div id="test2">
+	<h1>BLOG:
+	<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid0hwyUHEfQvtN57o72VJDN9TEei3hxNgyXzBd9yF3GBT5NzBhi3Q3HSwTzNuopTZkGl%26id%3D61557184077829&show_text=true&width=500" width="500" height="638" style="border:none;overflow:hidden" 
+	scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+	</h1>
+	<h2>This was authored by Jean Sinio</h2>
+	&nbsp;
+	<h1>SOCIALS:</h1>
+	<a href="https://www.facebook.com/justincharles.verdadero/"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>VERDADERO</h2>
+	<a href="https://www.facebook.com/profile.php?id=61557184077829"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>SINIO</h2>
+	<a href="https://www.facebook.com/nicole.non.319"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>NON</h2>
+	<a href="https://www.facebook.com/john.lacsina.184"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>LACSINA</h2>
+	<a href="https://www.facebook.com/profile.php?id=100006377356742"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>MIGNONETTE</h2>
+	</div>
+
+	<!--Quiz Section-->
+	<div id="quiz-section" class="quiz-section">
+		<div style="width:100%;display:flex;flex-direction:column;gap:8px;min-height:635px;">
+		<iframe src="https://quizizz.com/embed/quiz/66cdcd98d0dda8f676b7f93a" title="Group-5 Quiz - Quizizz" style="flex:1;" 
 		frameBorder="0" allowfullscreen></iframe><a href="https://quizizz.com/admin?source=embedFrame" 
 		target="_blank">Explore more at Quizizz.</a></div>
 		</div>
+		<button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+        Back to Top
+    </button>
 	</body>
 </html>
