--- a/Essential Elements.html
+++ b/Essential Elements.html
@@ -12,7 +12,7 @@
 		background-attachment: fixed;
 	}
 	</style>
-		<style>
+	<style>
 	#test1 {
 		background-color:#FCFBFC;
 		width: 1500px;
@@ -20,8 +20,6 @@
 		padding: 10px;
 		margin: auto;
 	}
-	</style>
-		<style>
         .back-to-top {
             position: fixed;
             bottom: 20px;
@@ -34,19 +32,25 @@
         }
         .back-to-top:hover {
             background-color: #0056b3;
+		}
+			nav a {
+			margin: 0 10px;
+			text-decoration: none;
+			color: #000;
+        }
 	</style>
 	
 	<body>
 	<!--top-->
 	<!--This body is full of content-->
 	<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
-		<div style="position: relative;"> <img src="Group5Logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
+		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
 	<h1 align="center">GROUP 5 - ESSENTIAL ELEMENTS</h1>
 	<header>
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
 				<a href="Essential Elements.html">Essential Elements</a>
-				<a href="Water and Water cycle.html">Water and Water cycle</a>
+				<a href="Water and Water Cycle.html">Water and Water cycle</a>
 				<a href="Reference.html">Reference</a>
 			</nav>
 		</header>
@@ -60,9 +64,9 @@
 </p>
 	<center><img src=Periodic-table-of-Elements.png Human  title="This is the periodic table of elements" height="650" width="900"style="vertical-align:middle;margin:2px 2px"></center>
 	<hr />
-	 <div  id="test1" class="center">
+	 <div  id="test1">
 	 <img src=Hydrogen.jpg height ="250"  width="250" align="right"/>
-	  <h2 align="center" style="color:black"><em><u>ESSENTIAL ELEMENTS</em></u></h2>
+	  <h2  style="color:black"><em><u>ESSENTIAL ELEMENTS</em></u></h2>
 	  <h3 style="color:black">
 		<ol>
 			<li> Carbon(C): The backbone of organic molecules, including proteins, nucleic acids, carbohydrates, and lipids.</li>
@@ -78,8 +82,8 @@
 		</ol>
 	   </h3>
 	   </div>
-		<div  id="test1" class="center">
-	   <h2 align="center" style="color:black"><em><u>ESSENTIAL COMPOUNDS</h2></em></u>
+		<div  id="test1">
+	   <h2 style="color:black"><em><u>ESSENTIAL COMPOUNDS</h2></em></u>
 	   <img src=water.jpg height = "250"  width="250" align="right"/>
 	   <h3 style="color:black">
 	   <ol>
@@ -95,6 +99,6 @@
 	   <h1 style="color:black" align="center"> These elements and compounds work together to support life processes, including metabolism, growth, and reproduction </h1>
 	   <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
         Back to Top
-    </button>
-	</body>
+   	 </button>
+</body>
 </html>
