--- a/Essential Elements.html
+++ b/Essential Elements.html
@@ -12,12 +12,19 @@
 		background-attachment: fixed;
 	}
 	</style>
-	<style>
+		<style>
 	#test1 {
-		background-color:#FCFBFC;
-		width: 1500px;
-		border: 10px solid black;
-		padding: 10px;
+		background-color:#a0bff0;
+		width: 1300px;
+		border: 5px solid grey;
+		padding: 50px;
+		margin: auto;
+	}
+	#test2 {
+		background-color:#FFFADA;
+		width: 800px;
+		border: 5px solid grey;
+		padding: 50px;
 		margin: auto;
 	}
         .back-to-top {
@@ -45,7 +52,7 @@
 	<!--This body is full of content-->
 	<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
 		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
-	<h1 align="center">GROUP 5 - ESSENTIAL ELEMENTS</h1>
+	<h1 align="center">GROUP 5 - WATER AND WATER CYCLE</h1>
 	<header>
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
@@ -55,50 +62,231 @@
 			</nav>
 		</header>
 	<hr />
-	<h1 style="color:white"><marquee>GRADE 8 ECCLESIASTES ------ ESSENTIAL ELEMENTS</h1></marquee>
+	<h1 style="color:white"><marquee>GRADE 8 ECCLESIASTES ------ WATER AND WATER CYCLE</h1></marquee>
 	<hr />
-	<!--this is the main content-->
-	<p style="margin-left: 100px; margin-right: 100px; color: black;" align="center">
-    Essential elements and compounds are crucial for the survival and function of living organisms. In this section, 
-    we will explore the essential elements and compounds which are vital for maintaining and supporting life functions.
-</p>
-	<center><img src=Periodic-table-of-Elements.png Human  title="This is the periodic table of elements" height="650" width="900"style="vertical-align:middle;margin:2px 2px"></center>
+	<div  id="test2" class="center">
+	<h1 align="center" style="color:black">Lessons</h1>
+		<h3 style="color:black">
+			<ul>
+				<li>What is water</li>
+					<ul>
+						<li>Explanation</li>
+						<li>Pictures</li>
+					</ul>
+				<li>How water affect the environment</li>
+					<ul>
+						<li>Explanation</li>
+						<li>Affects on the environment</li>
+					</ul>
+				<li>How water affect our bodies</li>
+					<ul>
+						<li>Affects on our bodies</li>
+					</ul>
+				<li>Water cycle</li>
+					<ul>
+						<li>Explanation</li>
+						<li>Importance and Purpose</li>
+						<li>Stages of the Water Cycle</li>
+			</ul>
+		</h3>
+	</div> 
+	<div  id="test1" class="center">
+	<dl align="center">
+	<h2 style="color:black"><dt>WHAT IS WATER?</h2></dt>
+		<dd style="color:black">Water is chemical compund made of the elements of hydrogen and oxygen. 
+		This compound helps support life in many ways. Animals and plants use water as a source of mineral or nutrition. Water can be solid, liquid, or gas.</dd>
+	</dl> 
+	<center><img src=water.jpg height = "300"  width="250"/></center>
+	</div>
 	<hr />
-	 <div  id="test1">
-	 <img src=Hydrogen.jpg height ="250"  width="250" align="right"/>
-	  <h2  style="color:black"><em><u>ESSENTIAL ELEMENTS</em></u></h2>
-	  <h3 style="color:black">
-		<ol>
-			<li> Carbon(C): The backbone of organic molecules, including proteins, nucleic acids, carbohydrates, and lipids.</li>
-			<li> Hydrogen(H): A component of water and organic molecules, essential for energy production and metabolism.</li>
-			<li> Oxygen(O): Needed for cellular respiration and is a part of water and organic molecules.</li>
-			<li> Nitrogen(N): A key component of amino acids (the building blocks of proteins) and nucleic acids (DNA and RNA).</li>
-			<li> Phosphorus(P): Important for energy transfer (ATP), nucleic acids, and phospholipids in cell membranes.</li>
-			<li> Sulfur(S): Found in some amino acids and vitamins, contributing to protein structure and function.</li>
-			<li> Calcium(Ca): Vital for cell signaling, muscle contraction, and bone and teeth structure.</li>
-			<li> Potassium(K): Regulates cell function and fluid balance, and is crucial for nerve and muscle function.</li>
-			<li> Sodium(Na): Important for maintaining fluid balance, nerve function, and muscle contraction.</li>
-			<li> Magnesium(Mg): Acts as a cofactor for many enzymes and is important for muscle and nerve function. </li>
-		</ol>
-	   </h3>
-	   </div>
-		<div  id="test1">
-	   <h2 style="color:black"><em><u>ESSENTIAL COMPOUNDS</h2></em></u>
-	   <img src=water.jpg height = "250"  width="250" align="right"/>
-	   <h3 style="color:black">
-	   <ol>
-			<li> Water(H₂O): The most critical compound, serving as a solvent, temperature regulator, and participant in biochemical reactions.</li>
-			<li> Carbohydrates: Include sugars and starches, which provide energy and structural components.</li>
-			<li> Proteins: Composed of amino acids, they serve as enzymes, structural components, and signaling molecules.</li>
-			<li> Lipids: Include fats, oils, and phospholipids, important for energy storage, cell membrane structure, and signaling.</li>
-			<li> Nucleic Acids: DNA and RNA are essential for storing genetic information and protein synthesis.</li>
-			<li> ATP(Adenosine Triphosphate): The primary energy carrier in cells. </li>
-	   </ol>
-	   </h3>
-	   </div>
-	   <h1 style="color:black" align="center"> These elements and compounds work together to support life processes, including metabolism, growth, and reproduction </h1>
-	   <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+	<h1 align="center"><em><u>How does water affect our environment?</u></em></h2>
+		<h3 style="margin-left: 100px; margin-right: 100px"><font size="+2"><b>Less Water Affects the Environment</b></h3></font>
+		<p style="margin-left: 100px; margin-right: 100px"><font size="+2">For example, lower water levels can contribute to higher concentrations of natural and human pollutants. 
+		Less water going down the drain means more water available in the lakes, rivers and streams that we use for recreation and wildlife uses to survive.<p></font>
+		
+		<p style="margin-left: 100px; margin-right: 100px"><font size="+2">Water for the environment supports the health of the river so that it can in turn provide for human needs. As water moves onto the floodplain, 
+		it releases carbon that energises the food web. River pulses trigger fish breeding and movement.</p></font>
+	<u><p style="margin-left: 100px; margin-right: 100px"><font size="+2">Water has a profound impact on our environment in several ways:</u></p></font>
+	<ol><dl style="margin-left: 100px; margin-right: 100px"><font size="+2">
+		<dt><li><b>Ecosystems</b></li></dt>
+			<ul>
+				<li>Water is essential for the survival of plants and animals. It supports aquatic ecosystems like rivers, lakes, and oceans, and terrestrial ecosystems by sustaining vegetation.</li>
+			</ul>
+		<dt><li><b>Climate Regulation</b></li></dt>
+			<ul>
+				<li>Water bodies influence weather patterns and climate. For instance, large bodies of water like oceans and seas help regulate temperatures by storing and distributing heat.</li>
+			</ul>
+		<dt><li><b>Weather Patterns</b></li></dt>
+			<ul>
+				<li>The evaporation of water from the surface contributes to cloud formation and precipitation, affecting weather and climate systems globally.</li>
+			</ul>
+		<dt><li><b>Soil Fertility</b></li></dt>
+			<ul>
+				<li>Water helps in the weathering of rocks and the transportation of minerals, which enhances soil fertility and supports agriculture.</li>
+			</ul>
+		<dt><li><b>Human Activities</b></li></dt>
+			<ul>
+				<li>Water is crucial for drinking, agriculture, industry, and energy production. However, human activities can lead to water pollution, which negatively affects both ecosystems and human health.</li>
+			</ul>
+		<dt><li><b>Natural Disasters</b></li></dt>
+			<ul>
+				<li>Water-related phenomena, such as floods, droughts, and hurricanes, can have significant impacts on the environment and human settlements.</li>
+			</ul>
+	</ol></dl></font>
+
+	<h1><strong>Overall, water plays a key role in shaping environmental conditions and supporting life on Earth.</h1></strong>
+	<hr />
+
+	<h1 align="center"><em><u>How water affects our bodies:</em></u></h2>
+	<ol style="margin-left: 100px; margin-right: 100px"><font size="+2">
+		<li><b>Hydration and Tissue Protection:</li></b>
+			<ul>
+					<li>Water lubricates our tissues and keeps our joints cushioned.</li>
+			</ul>
+		<li><b>Waste Removal:</li></b>
+			<ul>
+					<li>It helps our kidneys filter waste and prevents constipation.</li>
+			</ul>
+		<li><b>Digestion:</li></b>
+			<ul>
+					<li>Water assists in breaking down food and absorbing nutrients.</li>
+			</ul>
+		<li><b>Temperature Regulation:</li></b>
+			<ul>
+					<li>Sweat helps cool us down, preventing overheating.</li>
+			</ul>
+		<li><b>Cardiovascular Health:</li></b>
+			<ul>
+					<li>Water is crucial for maintaining blood volume and pressure.</li>
+			</ul>
+		<li><b>Brain Function:</li></b>
+			<ul>
+					<li>Dehydration can impair memory, concentration, and mood.</li>
+			</ul>
+		<li><b>Physical Performance:</li></b>
+			<ul>
+					<li>Staying hydrated is essential for peak performance during exercise.</li>
+			</ul>
+		<li><b>Weight Management:</li></b>
+			<ul>
+					<li>Water can help control appetite and aid in weight loss.</li>
+			</ul>
+		<li><b>Skin Health:</li></b>
+			<ul>
+					<li>It keeps our skin hydrated and may promote collagen production.</li>
+			</ul>
+		<li><b>Immune System Support: </li></b>
+			<ul>
+					<li>Water helps our bodies fight off infections and diseases.</li>
+			</ul>
+	</ol>
+	</h2>
+	<h1><strong>Remember to drink enough water daily to stay hydrated and maintain optimal health. Men should aim for about 15.5 cups, and women 11.5 cups of fluids per day</h1></strong>
+	<hr />
+	<h1 align="center"><em><u>WATER CYCLE</h1></em></u>
+	<h2> The water cycle describes how water helps in cooling down the Earth. It also shows the
+	continuous movement and cycle of water between the Earth and its atmosphere.
+	The water cycle has 7 stages </h2>
+	<h2 style="margin-left: 100px; margin-right: 100px">
+		<ul>
+			<li> Evaporation</li>
+			<li> Condensation</li>
+			<li> Precipitation</li>
+			<li> Sublimation</li>
+			<li> Transpiration</li>
+			<li> Runoff</li>
+			<li> Infiltration</li>
+		</ul>
+	</h2>
+	<h2>These stages can be seen through our everyday life like how evaporation can be seen while we
+	boil water and how Precipitation is seen as rain.
+	The main stages of the water cycle are Evaporation, Condensation, and lastly Precipitation.</h2>
+	
+	<h2><b><u>IMPORTANCE AND PURPOSE OF THE WATER CYCLE:</h1><b></u>
+	<h2>The water cycle is important for it regulates the weather patterns here on Earth. It is also to
+	spread the source of water so it can be available to animals, humans, insects, and more living
+	organisms.</h2>
+	<h2>It is a provider, supporter, and maintainer to the richness of our land.
+	It spreads resources such as water to give and support life here on Earth. It is a cycle that
+	continues for generations. This is why it is important to take care of our home planet. If we
+	ignore taking care of our home, the water cycle will be one of the things in our environment that
+	will be affected by any harm we do. </h2>
+	
+	<h2><b><u>THE 7 STAGES OF WATER CYCLE:</h1></b></u>
+
+		<h2><b>Evaporation</b></h2>
+		<ul>
+			<li>Evaporation is the process wherein a liquid turns into a gaseous state.</li>
+			<li>Water turns into the state og gas whenever the sun heats up any source of water.</li>
+		</ul>
+	<b><u>Purpose:</b></u>
+	This stage is use by experts to separate the solute (solid) from the solvent(liquid).
+	<b><u>Example: </b></u>
+	<p>Boiling water, Drying clothes in the sun, Drying wet hair, etc…</p>
+	
+		<h2><b>Condensation</b></h2>
+		<ul>
+			<li>Condensation is the process where water vapor becomes liquid.</li>
+			<li>This is the reverse action of evaporation.</li>
+			<li>The water vapor will likely turn into cloud or a gas that is full of moisture.</li>
+			<li>(Dew is simply condensed water in the atmosphere.)
+			<li>Air temperatures can reach or fall below the dew point naturally.</li>
+			<li>That is why ground, structures, and objects outside are usually coated with water droplets in the morning.</li>
+		</ul>
+	<b><u>Purpose:</b></u>
+	<ul>
+		<li>Condensation is responsible for making clouds. 
+		Without this stage, The liquid (i.e water) will remain in its gas state.</li>
+	</u/>
+	<b><u>Example:</b></u>
+		<p>Fog, Clouds, and more…</p>
+	
+		<h2><b>Precipitation</b></h2>
+		<ul>
+			<li>Precipitation is a stage of the water cycle where a liquid or frozen water falls down to the Earth.</li>
+			<li>When water vapor condenses into bigger and bigger droplets of water.</li>
+			<li>When the drops are heavy enough, they fall to the earth.</li>
+		</ul>
+	<b><u>Purpose:</b></u>
+	<ul>
+		<li>Precipitation cleans the atmosphere and wash out the air pollution and natural aerosols.</li>
+		<li>But mainly, it is to spread water supply to animals and humans.</li>
+	</ul>
+	<b><u>Example:</b></u>
+		<p>Rain, hail, snow, and etc…</p>
+
+		<h2><b>Sublimation</b></h2>
+		<ul>
+			<li>Sublimation is where moisture enters the atmosphere directly from ice to snow.</li>
+			<li>Sublimation is a process where ice or snow directly turns into a gaseous state.</li>
+		</ul>
+	<b><u>Example:</b></u>
+		<p>dry ice and solid fresheners</p>
+
+		<h2><b>Transpiration</b></h2>
+		<ul>
+			<li>Transpiration is the biological process by which water is lost in the form of water vapor from the aerial parts of the plants.</li>
+		</ul>
+	<b><u>Example:<b></u>
+		<p>stomatal transpiration, cuticular transpiration, and lenticular transpiration</p>
+		
+		<h2><b>Runoff</b></h2>
+		<ul>
+			<li>Runoff is when the precipitation is not soaked by the lands of the Earth but instantly moves into a nearby water source like streams or lakes.</li>
+		</ul>
+	<b><u>Purpose:</b></u>
+		It is to prevent moisture to build up and infiltration.
+	<b><u>Example:</b></u>
+		snowmelts
+		<h2><b>Infiltration</b></h2>
+		<ul>
+			<li>Infiltration is a process where the water that came from the Precipitation stage falls down and is absorbed into the ground.</li>
+		</ul>
+	<b><u>Example:</b></u>
+		<p>pouring water into a sponge</p>
+	<h2 align="center"><i>(These are all 7 stages of the water cycle)</h2></i>
+	<button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
         Back to Top
-   	 </button>
-</body>
+    </button>
+	</body>
 </html>
