--- a/Reference.html
+++ b/Reference.html
@@ -20,24 +20,32 @@
 		padding: 50px;
 		margin: auto;
 	}
+		nav a {
+		margin: 0 10px;
+		text-decoration: none;
+		color: #000;
+        }
 	</style>
 	
 	<body>
 	<!--This body is full of content-->
 	<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
-		<div style="position: relative;"> <img src="Group5Logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
+		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
 	<h1 align="center">GROUP 5 - REFERENCES</h1>
 		<header>
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
 				<a href="Essential Elements.html">Essential Elements</a>
-				<a href="Water and Water cycle.html">Water and Water cycle</a>
+				<a href="Water and Water Cycle.html">Water and Water cycle</a>
 				<a href="Reference.html">Reference</a>
 			</nav>
 		</header>
 		<hr />
 			<h1 style="color:white"><marquee>GRADE 8 ECCLESIASTES ------ REFERENCES</h1></marquee>
 			<hr />
+			<center>
+			<img src="GROUP_5_MEMBERS.png" alt="Members" height="1000" width="800">
+			</center>
 		<div  id="test1" class="center">
 	<h3 style="color:blue"><b>REFERENCES:</b>
 	<h5><a href="http://surl.li/sblcex">
@@ -53,5 +61,6 @@
 			The essentials of continuous evaporation. (2018b, May 17). AIChE.http://surl.li/icvjwb</a></h5>
 	<h5><a href="https://www.nationalgeographic.org/society/">https://www.nationalgeographic.org/society/</a> </h5>
 		</div>
+	</center>
 	</body>
 </html>
