Update Water and Water cycle.html

--- a/Water and Water cycle.html
+++ b/Water and Water cycle.html
@@ -12,16 +12,14 @@
 		background-attachment: fixed;
 	}
 	</style>
-		<style>
+	<style>
 	#test1 {
 		background-color:#a0bff0;
-		width: 1000px;
+		width: 1300px;
 		border: 5px solid grey;
 		padding: 50px;
 		margin: auto;
 	}
-	</style>
-		<style>
 	#test2 {
 		background-color:#FFFADA;
 		width: 800px;
@@ -29,8 +27,6 @@
 		padding: 50px;
 		margin: auto;
 	}
-	</style>
-		<style>
         .back-to-top {
             position: fixed;
             bottom: 20px;
@@ -43,19 +39,25 @@
         }
         .back-to-top:hover {
             background-color: #0056b3;
+		}
+			nav a {
+			margin: 0 10px;
+			text-decoration: none;
+			color: #000;
+        }
 	</style>
 	
 	<body>
 	<!--top-->
 	<!--This body is full of content-->
 	<div style="position: relative;"> <img src=holy-angel-university-logo.png logo height="110" width="110" style="position: absolute; right: 120px; top: 1px;"> </div>
-		<div style="position: relative;"> <img src="Group5Logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
+		<div style="position: relative;"> <img src="group5logo.png" height="120" width="120" style="position: absolute; left: 120px; top: 1px;"> </div>
 	<h1 align="center">GROUP 5 - WATER AND WATER CYCLE</h1>
 	<header>
 			<nav>
 				<h2 align="center"><a href="Homepage.html">Home</a>
 				<a href="Essential Elements.html">Essential Elements</a>
-				<a href="Water and Water cycle.html">Water and Water cycle</a>
+				<a href="Water and Water Cycle.html">Water and Water cycle</a>
 				<a href="Reference.html">Reference</a>
 			</nav>
 		</header>
@@ -88,12 +90,14 @@
 			</ul>
 		</h3>
 	</div> 
+	<div  id="test1" class="center">
 	<dl align="center">
 	<h2 style="color:black"><dt>WHAT IS WATER?</h2></dt>
 		<dd style="color:black">Water is chemical compund made of the elements of hydrogen and oxygen. 
 		This compound helps support life in many ways. Animals and plants use water as a source of mineral or nutrition. Water can be solid, liquid, or gas.</dd>
 	</dl> 
 	<center><img src=water.jpg height = "300"  width="250"/></center>
+	</div>
 	<hr />
 	<h1 align="center"><em><u>How does water affect our environment?</u></em></h2>
 		<h3 style="margin-left: 100px; margin-right: 100px"><font size="+2"><b>Less Water Affects the Environment</b></h3></font>
@@ -177,10 +181,8 @@
 			</ul>
 	</ol>
 	</h2>
-	</font>
 	<h1><strong>Remember to drink enough water daily to stay hydrated and maintain optimal health. Men should aim for about 15.5 cups, and women 11.5 cups of fluids per day</h1></strong>
 	<hr />
-	<div  id="test1" class="center">
 	<h1 align="center"><em><u>WATER CYCLE</h1></em></u>
 	<h2> The water cycle describes how water helps in cooling down the Earth. It also shows the
 	continuous movement and cycle of water between the Earth and its atmosphere.
@@ -235,6 +237,7 @@
 	<ul>
 		<li>Condensation is responsible for making clouds. 
 		Without this stage, The liquid (i.e water) will remain in its gas state.</li>
+	</u/>
 	<b><u>Example:</b></u>
 		<p>Fog, Clouds, and more…</p>
 	
@@ -278,10 +281,10 @@
 		<h2><b>Infiltration</b></h2>
 		<ul>
 			<li>Infiltration is a process where the water that came from the Precipitation stage falls down and is absorbed into the ground.</li>
+		</ul>
 	<b><u>Example:</b></u>
 		<p>pouring water into a sponge</p>
 	<h2 align="center"><i>(These are all 7 stages of the water cycle)</h2></i>
-	</div>
 	<button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
         Back to Top
     </button>
