Update Water and Water cycle.html

--- a/Water and Water cycle.html
+++ b/Water and Water cycle.html
@@ -27,6 +27,19 @@
 		padding: 50px;
 		margin: auto;
 	}
+	#test3 {
+		background-color: #373737;
+		width: 1200px;
+		height: 500px;
+		overflow: hidden;
+		border: 10px solid black;
+		padding: 0px;
+		margin: auto;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center; 
+		align-items: center; 
+	}
         .back-to-top {
             position: fixed;
             bottom: 20px;
@@ -285,6 +298,13 @@
 	<b><u>Example:</b></u>
 		<p>pouring water into a sponge</p>
 	<h2 align="center"><i>(These are all 7 stages of the water cycle)</h2></i>
+	<h2 align="center">LEARN MORE!</h2>
+		<div id="test3">
+    <iframe width="400" height="269" src="https://www.youtube.com/embed/TD3XSIE4ymo" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400" height="269" src="https://www.youtube.com/embed/al-do-HGuIk" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 	<button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
         Back to Top
     </button>
