--- a/Homepage.html
+++ b/Homepage.html
@@ -34,9 +34,19 @@
 	#test2 {
 		background-color:#fbfff1;
 		width: 500px;
+		overflow: hidden;
 		border: 10px solid black;
 		padding: 20px;
 		margin: 15px;
+		float:right;
+	}
+	#test3 {
+		background-color:#FFF0F5;
+		width: 1000px;
+		border: 10px solid black;
+		padding: 10px;
+		margin: 20px;
+		float:left;
 	}
         .right {
             float: right;
@@ -125,6 +135,17 @@
 	<a href="https://www.facebook.com/nicole.non.319"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>NON</h2>
 	<a href="https://www.facebook.com/john.lacsina.184"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>LACSINA</h2>
 	<a href="https://www.facebook.com/profile.php?id=100006377356742"><img src="Facebook-logo.png" style="float:left;width:50px;height:50px;"></a><h2>MIGNONETTE</h2>
+	</div>
+	<div id="test3">
+		<h1 align="center"><u>ABOUT US!</h1></u>
+		<img src=School.jpg School height="450" width="1000">
+		<h2 align="center">In here, we are passionate in giving you the quality information as possible. 
+		Our team are dedicated in giving you an exellent website that values the viewers to be able to learn and understand these topics. 
+		If you have any questions or need assistance, please don’t hesitate to contact us on our socials.
+		Thank you for reading this.</h2>
+		<h1 align="center"><u>Mission and Vission</u></h1>
+		<h2>Our mission is to offer great information that serves our viewers knowledge and deeper understanding to the topics or essential elements, water, and water cycle. 
+		We envission that we will be a help to people around the world.</h2>
 	</div>
 
 	<!--Quiz Section-->
