--- a/Homepage.html
+++ b/Homepage.html
@@ -138,7 +138,9 @@
 	</div>
 	<div id="test3">
 		<h1 align="center"><u>ABOUT US!</h1></u>
+		<center>
 		<img src=School.jpg School height="450" width="1000">
+		</center>
 		<h2 align="center">In here, we are passionate in giving you the quality information as possible. 
 		Our team are dedicated in giving you an exellent website that values the viewers to be able to learn and understand these topics. 
 		If you have any questions or need assistance, please don’t hesitate to contact us on our socials.
